Fri Jun 18 14:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* autogen.sh: drop special dependancies a given version of the
	  autotools

Fri Jun 18 14:12:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_protocol.h server/gam_connection.h: workaround
	  gtk-doc parsing limitations
	* configure.in Makefile.am gamin.spec.in libgamin/Makefile.am:
	  emulation of libfam wasn't sufficient to compile fam-dependant
	  code as pointed by hadess

Fri Jun 18 09:42:47 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: preparing first release of 0.0.1
	* tests/Makefile.am tests/testing.c: a bit more work on the
	  testing framework

Thu Jun 17 14:32:07 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/Makefile.am libgamin/testing.c tests/Makefile.am
	  tests/testing.c: setup the test environment
	* tests/scenario/tst1 tests/result/tst1: add first test

Thu Jun 17 00:38:33 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_fork.c libgamin/gamin.c
	  libgamin/testing.c server/gam_channel.c: renamed the ID
	  environment variable to GAM_CLIENT_ID

Wed Jun 16 23:35:13 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c libgamin/gam_data.c libgamin/gam_data.h
	  server/gam_channel.c server/gam_connection.c TODO: Changed
	  the protocol to add an authentication byte from the server
	  to the client at the beginning of the stream and authentication
	  code on the client to check that the server is running under
	  the same user.
	* gamin.spec: generated by configure, removed.

Wed Jun 16 11:55:59 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* TODO libgamin/Makefile.am libgamin/gamin_sym.version: block
	  non-FAM symbols export from shared lib
	* Copyright: reference the AUTHORS and COPYING files.

Tue Jun 15 23:45:50 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* AUTHORS COPYING README: update to reflect the LGPL licence