@@ -1,3 +1,9 @@
+Fri Jun 18 15:28:32 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/fam.h libgamin/gam_api.c: the new version of the
+	  FAMCONNECTION_GETFD macro was buggy. Applied patch from
+	  hadess.
+
 Fri Jun 18 14:25:04 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* autogen.sh: drop special dependancies a given version of the
